--- a/index.html
+++ b/index.html
@@ -197,14 +197,6 @@
                     <img src="Image_20250902220437.jpg" alt="Portrait at 0 feet: baseline vantage and framing">
                     <div class="figcaption">(0 feet) Baseline position and framing.</div>
                 </div>
-                <div class="figure">
-                    <img src="https://placehold.co/600x800/4fc3a1/ffffff?text=Part+1+1ft" alt="Portrait at +1 feet; stepped back and zoomed to match framing">
-                    <div class="figcaption">(+1 feet) Step back ~1 ft; zoomed to maintain subject size.</div>
-                </div>
-                <div class="figure">
-                    <img src="https://placehold.co/600x800/2c3e50/ffffff?text=Part+1+2ft" alt="Portrait at +2 feet; further reduced perspective distortion">
-                    <div class="figcaption">(+2 feet) Step back ~2 ft; proportions appear more neutral.</div>
-                </div>
             </div>
 
             <div class="reflection">
@@ -261,7 +253,7 @@
     </main>
 
     <footer>
-        <p>CS180/280A Project 0 - © 2025</p>
+        <p>CS180/280A Project 0 - Yichen Cai © 2025</p>
         <p>Hosted on GitHub Pages</p>
     </footer>
 </body>
