--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
 
     <footer>
-        <p>CS180/280A Portfolio - © 2025</p>
+        <p>CS180/280A Portfolio - Yichen Cai © 2025</p>
         <p>Hosted on GitHub Pages</p>
     </footer>
 
