--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
         <div class="project-content">
             <h2>Project 0: Becoming Friends with Your Camera</h2>
-            <p>Exploring perspective, focal length, and the dolly zoom effect through photography exercises.</p>
+           
             <a href="#project0" class="project-link">View Project 0</a>
         </div>
     </div>
@@ -258,20 +258,18 @@
         </style>
         
         <div class="project0-section">
-            <h2>Part 1 — Portrait Series at Controlled Camera Offsets</h2>
+            <h2>Part 1 — Selfie Series</h2>
             <p class="note">
-                Distances are expressed relative to a <em>baseline</em> vantage point that yields the desired framing.
-                Negative values indicate moving closer than baseline; positive values indicate stepping back. When stepping back,
-                I increased focal length to keep face size approximately constant.
+                Distances are measured from a <em>reference position</em> that achieves optimal framing. Values below this baseline represent moving toward the subject, while those above indicate increasing distance. To preserve consistent facial proportions when moving backward, I correspondingly adjusted the zoom to compensate.
             </p>
 
             <div class="image-grid grid-2">
                 <div class="figure">
-                    <img src="Image_20250902220431.jpg" alt="Portrait at −1 feet relative to baseline; closer, wider perspective">
+                    <img src="Image_20250902220431.jpg" >
                     <div class="figcaption">(−1 feet) Closer than baseline; stronger perspective exaggeration.</div>
                 </div>
                 <div class="figure">
-                    <img src="Image_20250902220437.jpg" alt="Portrait at 0 feet: baseline vantage and framing">
+                    <img src="Image_20250902220437.jpg" >
                     <div class="figcaption">(0 feet) Baseline position and framing.</div>
                 </div>
             </div>
@@ -279,23 +277,20 @@
             <div class="reflection">
                 <h4>Reflection — Part 1</h4>
                 <p>
-                    When stepping closer to the person, his facial features become more pronounced, with the nose appearing larger relative to the ears.
-                    When stepping back, the facial features appear more compressed and proportional.
-                    I think this is because when moving closer, the proportional distance differences between the noses and ears gets exaggerated.
-                    Therefore, the nose and mouth occupy a larger visual space, drawing more attention.
+                    As I moved closer to the subject, their facial features became increasingly pronounced, with the nose appearing substantially larger in relation to the ears. Conversely, increasing the distance resulted in more compressed and balanced facial proportions. This phenomenon occurs because reduced shooting distance amplifies the relative distance variance between facial features—the nose being significantly closer to the lens than the ears. Consequently, the nose and mouth command greater visual prominence, naturally drawing the viewer's attention.
                 </p>
             </div>
         </div>
 
         <div class="project0-section">
-            <h2>Part 2 — Architectural Perspective Comparison</h2>
+            <h2>Part 2 — Perspective Comparison</h2>
             <div class="image-grid grid-2">
                 <div class="figure">
-                    <img src="Image_20250902215133.jpg" alt="Zoomed-in urban scene shot from far away; planar, compressed look">
+                    <img src="Image_20250902215133.jpg" alt="Zoomed-in scene shot from far away">
                     <div class="figcaption">Zoomed from far — scene appears flatter/compressed; parallels remain nearly parallel.</div>
                 </div>
                 <div class="figure">
-                    <img src="Image_20250902215140.jpg" alt="Wide-angle view from near; converging verticals and exaggerated depth">
+                    <img src="Image_20250902215140.jpg" alt="Wide-angle view from near">
                     <div class="figcaption">No zoom — stronger convergence; foreground/background depth is emphasized.</div>
                 </div>
             </div>
@@ -303,9 +298,7 @@
             <div class="reflection">
                 <h4>Reflection — Part 2</h4>
                 <p>
-                    Similar as Part 1, moving the camera changes perspective; changing focal length only changes framing.
-                    When I get close, near parts of the scene are much closer than far parts, so they project disproportionately larger.
-                    When I step back, those distance differences shrink, so the scene looks more "neutral" or "compressed."
+                   As observed in the portrait study, adjusting camera position fundamentally alters perspective, while focal length primarily affects image composition without changing spatial relationships. At closer proximity, foreground elements appear dramatically enlarged compared to background features, creating exaggerated depth perception. By increasing shooting distance, the relative scale differences diminish, producing a more balanced, compressed visual representation that appears flatter and more uniform in perspective.
                 </p>
             </div>
         </div>
@@ -319,9 +312,7 @@
             <div class="reflection">
                 <h4>Reflection — Part 3</h4>
                 <p>
-                    The dolly zoom effect creates a disorienting feeling as the background appears to change size relative to the subject.
-                    This technique manipulates perspective while maintaining the subject size, creating a surreal visual effect.
-                    It's fascinating how this simple camera technique can dramatically alter the viewer's perception of space.
+                    The dolly zoom generates a powerful psychological disorientation by dramatically shifting background perspective while keeping the subject's size constant. This cinematic technique creates a surreal, vertigo-inducing experience where the environment appears to expand or contract around a stable focal point. It's remarkable how this seemingly straightforward combination of camera movement and focal adjustment can so profoundly manipulate our perception of three-dimensional space within a two-dimensional medium.
                 </p>
             </div>
         </div>
