--- a/index.html
+++ b/index.html
@@ -524,35 +524,35 @@
             
             <div class="results-grid">
                 <div class="result-item">
-                    <img src="melons_aligned.jpg" alt="Melons result">
+                    <img src="melons_combined_aligned.jpg" alt="Melons result">
                     <div class="displacement">melons.tif<br>B:(-82, -11), R:(96, 3)</div>
                 </div>
                 <div class="result-item">
-                    <img src="church_aligned.jpg" alt="Church result">
+                    <img src="church_combined_aligned.jpg" alt="Church result">
                     <div class="displacement">church.tif<br>B:(-25, -4), R:(33, -8)</div>
                 </div>
                 <div class="result-item">
-                    <img src="lugano_aligned.jpg" alt="Lugano result">
+                    <img src="lugano_combined_aligned.jpg" alt="Lugano result">
                     <div class="displacement">lugano.tif<br>B:(-41, 16), R:(52, -13)</div>
                 </div>
                 <div class="result-item">
-                    <img src="lastochikino_aligned.jpg" alt="Lastochikino result">
+                    <img src="lastochikino_combined_aligned.jpg" alt="Lastochikino result">
                     <div class="displacement">lastochikino.tif<br>B:(3, 2), R:(78, -7)</div>
                 </div>
                 <div class="result-item">
-                    <img src="siren_aligned.jpg" alt="Siren result">
+                    <img src="siren_combined_aligned.jpg" alt="Siren result">
                     <div class="displacement">siren.tif<br>B:(-49, 6), R:(47, -19)</div>
                 </div>
                 <div class="result-item">
-                    <img src="self_portrait_aligned.jpg" alt="Self portrait result">
+                    <img src="self_portrait_combined_aligned.jpg" alt="Self portrait result">
                     <div class="displacement">self_portrait.tif<br>B:(-79, -29), R:(98, 8)</div>
                 </div>
                 <div class="result-item">
-                    <img src="three_generations_aligned.jpg" alt="Three generations result">
+                    <img src="three_generations_combined_aligned.jpg" alt="Three generations result">
                     <div class="displacement">three_generations.tif<br>B:(-53, -14), R:(59, -3)</div>
                 </div>
                 <div class="result-item">
-                    <img src="italil_aligned.jpg" alt="Italil result">
+                    <img src="italil_combined_aligned.jpg" alt="Italil result">
                     <div class="displacement">italil.tif<br>B:(-38, -21), R:(39, 15)</div>
                 </div>
             </div>
@@ -561,15 +561,15 @@
             
             <div class="results-grid">
                 <div class="result-item">
-                    <img src="master-pnp-prok-00000-00095u_aligned.jpg" alt="Additional example 1">
+                    <img src="master-pnp-prok-00000-00095u_combined_aligned.jpg" alt="Additional example 1">
                     <div class="displacement">master-pnp-prok-00000-00095u<br>B:(-32, 0), R:(103, -3)</div>
                 </div>
                 <div class="result-item">
-                    <img src="master-pnp-prok-00100-00110u_aligned.jpg" alt="Additional example 2">
+                    <img src="master-pnp-prok-00100-00110u_combined_aligned.jpg" alt="Additional example 2">
                     <div class="displacement">master-pnp-prok-00100-00110u<br>B:(-26, -10), R:(44, 1)</div>
                 </div>
                 <div class="result-item">
-                    <img src="master-pnp-prok-00100-00115u_aligned.jpg" alt="Additional example 3">
+                    <img src="master-pnp-prok-00100-00115u_combined_aligned.jpg" alt="Additional example 3">
                     <div class="displacement">master-pnp-prok-00100-00115u<br>B:(-52, -1), R:(62, -25)</div>
                 </div>
             </div>
