--- a/index.html
+++ b/index.html
@@ -524,27 +524,27 @@
             
             <div class="results-grid">
                 <div class="result-item">
-                    <img src="cathedral_combined_aligned.jpg" alt="Lugano result">
+                    <img src="cathedral_combined_aligned.jpg" alt="Cathedral result">
                     <div class="displacement">lugano.tif<br>B:(-41, 16), R:(52, -13)</div>
                 </div>
                 <div class="result-item">
-                    <img src="monastery_combined_aligned.jpg" alt="Lastochikino result">
+                    <img src="monastery_combined_aligned.jpg" alt="monastery result">
                     <div class="displacement">lastochikino.tif<br>B:(3, 2), R:(78, -7)</div>
                 </div>
                 <div class="result-item">
-                    <img src="tobolsk_combined_aligned.jpg" alt="Siren result">
+                    <img src="tobolsk_combined_aligned.jpg" alt="tobolsk result">
                     <div class="displacement">siren.tif<br>B:(-49, 6), R:(47, -19)</div>
                 </div>
                 <div class="result-item">
-                    <img src="emir_combined_aligned.jpg" alt="Self portrait result">
+                    <img src="emir_combined_aligned.jpg" alt="emir result">
                     <div class="displacement">self_portrait.tif<br>B:(-79, -29), R:(98, 8)</div>
                 </div>
                 <div class="result-item">
-                    <img src="harvester_combined_aligned.jpg" alt="Three generations result">
+                    <img src="harvester_combined_aligned.jpg" alt="harvester result">
                     <div class="displacement">three_generations.tif<br>B:(-53, -14), R:(59, -3)</div>
                 </div>
                 <div class="result-item">
-                    <img src="icon_combined_aligned.jpg" alt="Italil result">
+                    <img src="icon_combined_aligned.jpg" alt="icon result">
                     <div class="displacement">italil.tif<br>B:(-38, -21), R:(39, 15)</div>
                 </div>
                 <div class="result-item">
