--- a/index.html
+++ b/index.html
@@ -525,27 +525,27 @@
             <div class="results-grid">
                 <div class="result-item">
                     <img src="cathedral_combined_aligned.jpg" alt="Cathedral result">
-                    <div class="displacement">lugano.tif<br>B:(-41, 16), R:(52, -13)</div>
+                    <div class="displacement">cathedral.tif<br>B:(-5, -2), R:(7, 1)</div>
                 </div>
                 <div class="result-item">
                     <img src="monastery_combined_aligned.jpg" alt="monastery result">
-                    <div class="displacement">lastochikino.tif<br>B:(3, 2), R:(78, -7)</div>
+                    <div class="displacement">monastery.tif<br>B:(3, -2), R:(6, 1)</div>
                 </div>
                 <div class="result-item">
                     <img src="tobolsk_combined_aligned.jpg" alt="tobolsk result">
-                    <div class="displacement">siren.tif<br>B:(-49, 6), R:(47, -19)</div>
+                    <div class="displacement">tobolsk.tif<br>B:(-3, -3), R:(4, 1)</div>
                 </div>
                 <div class="result-item">
                     <img src="emir_combined_aligned.jpg" alt="emir result">
-                    <div class="displacement">self_portrait.tif<br>B:(-79, -29), R:(98, 8)</div>
+                    <div class="displacement">emir.tif<br>B:(-49, -24), R:(57, 17)</div>
                 </div>
                 <div class="result-item">
                     <img src="harvester_combined_aligned.jpg" alt="harvester result">
-                    <div class="displacement">three_generations.tif<br>B:(-53, -14), R:(59, -3)</div>
+                    <div class="displacement">harvesters.tif<br>B:(-59, -17), R:(65, -3)</div>
                 </div>
                 <div class="result-item">
                     <img src="icon_combined_aligned.jpg" alt="icon result">
-                    <div class="displacement">italil.tif<br>B:(-38, -21), R:(39, 15)</div>
+                    <div class="displacement">icon.tif<br>B:(-41, -17), R:(48, 5)</div>
                 </div>
                 <div class="result-item">
                     <img src="melons_combined_aligned.jpg" alt="Melons result">
@@ -586,15 +586,15 @@
             <div class="results-grid">
                 <div class="result-item">
                     <img src="master-pnp-prok-00000-00095u_combined_aligned.jpg" alt="Additional example 1">
-                    <div class="displacement">master-pnp-prok-00000-00095u<br>B:(-32, 0), R:(103, -3)</div>
+                    <div class="displacement"><br>B:(-32, 0), R:(103, -3)</div>
                 </div>
                 <div class="result-item">
                     <img src="master-pnp-prok-00100-00110u_combined_aligned.jpg" alt="Additional example 2">
-                    <div class="displacement">master-pnp-prok-00100-00110u<br>B:(-26, -10), R:(44, 1)</div>
+                    <div class="displacement"><br>B:(-26, -10), R:(44, 1)</div>
                 </div>
                 <div class="result-item">
                     <img src="master-pnp-prok-00100-00115u_combined_aligned.jpg" alt="Additional example 3">
-                    <div class="displacement">master-pnp-prok-00100-00115u<br>B:(-52, -1), R:(62, -25)</div>
+                    <div class="displacement"><br>B:(-52, -1), R:(62, -25)</div>
                 </div>
             </div>
 
